--- a/reader.html
+++ b/reader.html
@@ -26,20 +26,28 @@
 <body>
   <div id="loader"><div class="spinner"></div></div>
 
-  <!-- Paywall with your real plan links -->
-  <div id="paywall">
-    <p>You’ve reached your free preview (5 pages).<br/>Subscribe to continue reading.</p>
-    <a
-      href="https://classyfemininity.lemonsqueezy.com/checkout/buy/1780d2f3-5d6e-4e63-a9f8-b9195599568f?embed=1"
-      class="lemonsqueezy-button"
-      id="yearly-btn"
-    >Subscribe Yearly</a>
-    <a
-      href="https://classyfemininity.lemonsqueezy.com/checkout/buy/1c5627ce-5495-4e43-9bfa-1cd3b9310f3a?embed=1"
-      class="lemonsqueezy-button"
-      id="monthly-btn"
-    >Subscribe Monthly</a>
-  </div>
+ <!-- Paywall -->
+<div id="paywall">
+  <p>You’ve reached your free preview (5 pages).<br/>Subscribe to continue reading.</p>
+
+  <!-- Yearly (variant 816279) -->
+  <a
+    href="https://classyfemininity.lemonsqueezy.com/checkout/buy/1780d2f3-5d6e-4e63-a9f8-b9195599568f?enabled=816279&embed=1"
+    class="lemonsqueezy-button"
+    id="yearly-btn"
+  >
+    Subscribe Yearly
+  </a>
+
+  <!-- Monthly (variant 816280) -->
+  <a
+    href="https://classyfemininity.lemonsqueezy.com/checkout/buy/1c5627ce-5495-4e43-9bfa-1cd3b9310f3a?enabled=816280&embed=1"
+    class="lemonsqueezy-button"
+    id="monthly-btn"
+  >
+    Subscribe Monthly
+  </a>
+</div>
 
   <canvas id="canvas"></canvas>
 
