--- a/reader.html
+++ b/reader.html
@@ -5,18 +5,60 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Reader — Classy Femininity</title>
   <style>
-    * { box-sizing:border-box; margin:0; padding:0; }
-    html, body { height:100%; font-family:sans-serif; }
-    #loader { position:fixed; inset:0; background:rgba(255,255,255,0.95); display:flex; align-items:center; justify-content:center; z-index:1000; }
-    .spinner { border:6px solid #eee; border-top:6px solid #b20235; border-radius:50%; width:48px; height:48px; animation:spin 1s linear infinite; }
-    @keyframes spin { to { transform:rotate(360deg); } }
-    #paywall { position:fixed; inset:0; background:rgba(0,0,0,0.85); color:#fff; display:none; flex-direction:column; align-items:center; justify-content:center; text-align:center; padding:24px; z-index:1001; }
-    #paywall a { display:inline-block; margin:12px 6px; padding:10px 20px; background:#b20235; color:#fff; text-decoration:none; border-radius:4px; font-size:1rem; }
-    #canvas { display:block; width:100%; }
-    .nav { position:fixed; bottom:16px; left:50%; transform:translateX(-50%); background:rgba(255,255,255,0.9); padding:8px 16px; border-radius:6px; box-shadow:0 2px 4px rgba(0,0,0,0.1); display:flex; align-items:center; z-index:500; }
-    .nav button { margin:0 8px; padding:6px 12px; background:#b20235; color:#fff; border:none; border-radius:4px; cursor:pointer; }
-    .nav span { font-size:1rem; margin:0 4px; }
-    .error { padding:24px; text-align:center; color:red; }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    html, body { height: 100%; font-family: sans-serif; }
+
+    /* Loader */
+    #loader {
+      position: fixed; inset: 0;
+      background: rgba(255,255,255,0.95);
+      display: flex; align-items: center; justify-content: center;
+      z-index: 1000;
+    }
+    .spinner {
+      border: 6px solid #eee;
+      border-top: 6px solid #b20235;
+      border-radius: 50%;
+      width: 48px; height: 48px;
+      animation: spin 1s linear infinite;
+    }
+    @keyframes spin { to { transform: rotate(360deg); } }
+
+    /* Paywall */
+    #paywall {
+      position: fixed; inset: 0;
+      background: rgba(0,0,0,0.85); color: #fff;
+      display: none; flex-direction: column;
+      align-items: center; justify-content: center;
+      text-align: center; padding: 24px; z-index: 1001;
+    }
+    #paywall a {
+      display: inline-block;
+      margin: 12px; padding: 10px 20px;
+      background: #b20235; color: #fff;
+      text-decoration: none; border-radius: 4px;
+      font-size: 1rem;
+    }
+
+    /* PDF canvas */
+    #canvas { display: block; width: 100%; }
+
+    /* Navigation */
+    .nav {
+      position: fixed; bottom: 16px; left: 50%;
+      transform: translateX(-50%);
+      background: rgba(255,255,255,0.9);
+      padding: 8px 16px; border-radius: 6px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      display: flex; align-items: center; z-index: 500;
+    }
+    .nav button {
+      margin: 0 8px; padding: 6px 12px;
+      background: #b20235; color: #fff;
+      border: none; border-radius: 4px; cursor: pointer;
+    }
+    .nav span { font-size: 1rem; margin: 0 4px; }
+    .error { padding: 24px; text-align: center; color: red; }
   </style>
 
   <!-- PDF.js -->
@@ -29,15 +71,15 @@
 
   <div id="paywall">
     <p>You’ve reached your free preview (5 pages).<br/>Subscribe to continue reading.</p>
-    <!-- Yearly -->
+    <!-- Yearly plan -->
     <a
-      href="https://classyfemininity.lemonsqueezy.com/checkout/buy/1780d2f3-5d6e-4e63-a9f8-b9195599568f?enabled=816279&embed=1"
+      href="https://classyfemininity.lemonsqueezy.com/checkout/buy/1780d2f3-5d6e-4e63-a9f8-b9195599568f?enabled=816279&embed=1&redirect=https%3A%2F%2Fclassy-femininity-app.vercel.app%2Freader.html%3Fbook%3D1%26subscribed%3D1"
       class="lemonsqueezy-button"
       id="yearly-btn"
     >Subscribe Yearly</a>
-    <!-- Monthly -->
+    <!-- Monthly plan -->
     <a
-      href="https://classyfemininity.lemonsqueezy.com/checkout/buy/1c5627ce-5495-4e43-9bfa-1cd3b9310f3a?enabled=816280&embed=1"
+      href="https://classyfemininity.lemonsqueezy.com/checkout/buy/1c5627ce-5495-4e43-9bfa-1cd3b9310f3a?enabled=816280&embed=1&redirect=https%3A%2F%2Fclassy-femininity-app.vercel.app%2Freader.html%3Fbook%3D1%26subscribed%3D1"
       class="lemonsqueezy-button"
       id="monthly-btn"
     >Subscribe Monthly</a>
@@ -56,76 +98,117 @@
       const params = new URLSearchParams(location.search);
       const bookId = params.get('book') || '1';
 
-      // Handle redirect flag
+      // Handle redirect flag after checkout
       if (params.get('subscribed') === '1') {
         localStorage.setItem('subscribed','true');
-        history.replaceState(null, '', `reader.html?book=${bookId}`);
+        history.replaceState(null,'', `reader.html?book=${bookId}`);
       }
 
-      // Sync subscription state
+      // 1) Fetch real subscription status
+      let isSubscribed = false;
       try {
         const res = await fetch('/api/check-sub', { credentials:'include' });
         if (res.ok) {
           const { subscribed } = await res.json();
-          subscribed
-            ? localStorage.setItem('subscribed','true')
-            : localStorage.removeItem('subscribed');
+          isSubscribed = subscribed;
+          if (subscribed) localStorage.setItem('subscribed','true');
         }
-      } catch(e){ console.error('check-sub failed',e) }
+      } catch(e) {
+        console.error('check-sub failed', e);
+      }
 
-      // On Lemon success, set cookie & unlock
-      window.addEventListener('Checkout.Success', e => {
-        const userId = e.data?.attributes?.user_id || e.detail?.data?.attributes?.user_id;
-        if (userId) {
-          document.cookie = `userId=${userId}; path=/; Secure; SameSite=Lax`;
-          localStorage.setItem('subscribed','true');
-          document.getElementById('paywall').style.display='none';
-          queueRenderPage(pageNum);
-        }
+      // 2) Also update on Lemon checkout success
+      window.addEventListener('Checkout.Success', () => {
+        isSubscribed = true;
+        localStorage.setItem('subscribed','true');
+        document.getElementById('paywall').style.display = 'none';
+        queueRenderPage(currentPage);
       });
 
-      // PDF.js
-      pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js';
-      const pdfUrl = `/ebooks/book-${bookId}.pdf`;
-      const loader = document.getElementById('loader');
-      const paywall= document.getElementById('paywall');
-      const canvas = document.getElementById('canvas');
-      const ctx    = canvas.getContext('2d');
-      const prev   = document.getElementById('prev');
-      const next   = document.getElementById('next');
-      const pgNum  = document.getElementById('page-num');
-      const pgCnt  = document.getElementById('page-count');
-      function showLoader(on){ loader.style.display = on?'flex':'none'; }
+      // PDF.js setup
+      pdfjsLib.GlobalWorkerOptions.workerSrc =
+        'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js';
 
-      let pdfDoc=null, pageNum=1, pageIsRendering=false, pagePending=null;
+      const pdfUrl    = `/ebooks/book-${bookId}.pdf`;
+      const loader    = document.getElementById('loader');
+      const paywallEl = document.getElementById('paywall');
+      const canvas    = document.getElementById('canvas');
+      const ctx       = canvas.getContext('2d');
+      const prevBtn   = document.getElementById('prev');
+      const nextBtn   = document.getElementById('next');
+      const pageNumEl = document.getElementById('page-num');
+      const pageCntEl = document.getElementById('page-count');
 
-      fetch(pdfUrl,{method:'HEAD'})
-        .then(r=>{ if(!r.ok) throw new Error(r.status); return pdfjsLib.getDocument(pdfUrl).promise; })
-        .then(doc=>{ pdfDoc=doc; pgCnt.textContent=doc.numPages; showLoader(false); initView(); })
-        .catch(err=>{ console.error(err); showLoader(false); document.body.innerHTML=`<p class="error">Could not load PDF: ${err.message}</p>`; });
+      let pdfDoc = null,
+          currentPage = 1,
+          pageIsRendering = false,
+          pagePending = null;
 
-      function renderPage(n){
-        if(n>5 && localStorage.getItem('subscribed')!=='true'){
-          paywall.style.display='flex'; return;
+      function showLoader(show) {
+        loader.style.display = show ? 'flex' : 'none';
+      }
+
+      // Load the PDF
+      fetch(pdfUrl, { method:'HEAD' })
+        .then(r => {
+          if (!r.ok) throw new Error(`HTTP ${r.status}`);
+          return pdfjsLib.getDocument(pdfUrl).promise;
+        })
+        .then(doc => {
+          pdfDoc = doc;
+          pageCntEl.textContent = pdfDoc.numPages;
+          showLoader(false);
+          initViewer();
+        })
+        .catch(err => {
+          console.error(err);
+          showLoader(false);
+          document.body.innerHTML = `<p class="error">Could not load PDF: ${err.message}</p>`;
+        });
+
+      // Render a page with paywall gating
+      function renderPage(num) {
+        if (num > 5 && !isSubscribed) {
+          paywallEl.style.display = 'flex';
+          return;
         }
-        paywall.style.display='none'; pageIsRendering=true;
-        pdfDoc.getPage(n).then(page=>{
-          const vp=page.getViewport({scale:1.5});
-          canvas.width=vp.width; canvas.height=vp.height;
-          page.render({canvasContext:ctx,viewport:vp}).promise.then(()=>{
-            pageIsRendering=false;
-            if(pagePending!==null){ renderPage(pagePending); pagePending=null; }
+        paywallEl.style.display = 'none';
+        pageIsRendering = true;
+
+        pdfDoc.getPage(num).then(page => {
+          const vp = page.getViewport({ scale: 1.5 });
+          canvas.width  = vp.width;
+          canvas.height = vp.height;
+          page.render({ canvasContext: ctx, viewport: vp }).promise.then(() => {
+            pageIsRendering = false;
+            if (pagePending !== null) {
+              renderPage(pagePending);
+              pagePending = null;
+            }
           });
-          pgNum.textContent=n;
+          pageNumEl.textContent = num;
         });
       }
-      function queueRenderPage(n){
-        pageIsRendering? pagePending=n : renderPage(n);
+
+      function queueRenderPage(num) {
+        pageIsRendering ? pagePending = num : renderPage(num);
       }
-      function initView(){
-        prev.onclick=()=>{ if(pageNum>1){ pageNum--; queueRenderPage(pageNum); } };
-        next.onclick=()=>{ if(pageNum<pdfDoc.numPages){ pageNum++; queueRenderPage(pageNum); } };
-        renderPage(pageNum);
+
+      // Initialize navigation & draw first page
+      function initViewer() {
+        prevBtn.onclick = () => {
+          if (currentPage > 1) {
+            currentPage--;
+            queueRenderPage(currentPage);
+          }
+        };
+        nextBtn.onclick = () => {
+          if (currentPage < pdfDoc.numPages) {
+            currentPage++;
+            queueRenderPage(currentPage);
+          }
+        };
+        renderPage(currentPage);
       }
     });
   </script>
